# flip

./: .gitignore  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
data_generator/: parser.py
data_generator/transformers/: core.py
data_generator/transformers/data_augmentation/: random_resize.py  rotate.py
data_generator/transformers/domain_randomization/: draw.py
data_generator/transformers/labeler/: core.py  test.py
data_generator/transformers/saver/: core.py  json.py
docs/: README.md  getting-started.ipynb  index.md
examples/: README.md  crop_image_from_mask.ipynb  data_generator.py  show_labels.ipynb
flip/: __about__.py  __init__.py  utils.py
flip/transformers/: __init__.py  constants.py  element.py  transformer.py  utils.py
flip/transformers/data_augmentation/: __init__.py  color.py  cut_out.py  flip.py  noise.py  random_crop.py  random_resize.py  rotate.py
flip/transformers/domain_randomization/: __init__.py  draw.py  objects_random_position.py
flip/transformers/io/: __init__.py  csv.py  json.py  pascal_voc.py  save_image.py  save_mask.py  yolo.py
flip/transformers/labeler/: __init__.py  create_bounding_boxes.py  create_masks.py
flip/transformers/saver/: __init__.py  core.py  csv.py
tests/: test_transformer.py  test_transformer.yml
