[build-system]
requires = ["flit", "setuptools"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "flip"
author = "linkedai"
author-email = "d@linkedai.co"
classifiers = ["License :: OSI Approved :: GPL-3 License"]
requires-python=">=3.7"
requires = [
    "opencv-python>=4.3",
    "pyyaml",
    "jinja2"
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "cytoolz"
]